--- a/styles/style.css
+++ b/styles/style.css
@@ -378,3 +378,25 @@ label {
   color: gold;
 }
 
+@keyframes shake {
+  0% { transform: translateX(0); }
+  20% { transform: translateX(-5px); }
+  40% { transform: translateX(5px); }
+  60% { transform: translateX(-5px); }
+  80% { transform: translateX(5px); }
+  100% { transform: translateX(0); }
+}
+
+
+@keyframes scale-up {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.3); }
+}
+
+.shake {
+  animation: shake 0.4s;
+}
+
+.scale-up .star {
+  animation: scale-up 0.4s ease-in-out;
+}
